# Quantpicks.ai

./: PROJECT_CONTEXT.md  README.md
nba_etl_pkg/: README.md  pyproject.toml
nba_etl_pkg/nba_etl/: __init__.py  cache.py  cli.py  http.py  models.py  storage.py
nba_etl_pkg/nba_etl/clients/: __init__.py  nba_cdn_client.py  stats_nba_client.py
nba_etl_pkg/nba_etl/transform/: __init__.py  features.py  normalize.py
nba_etl_pkg/nba_etl_output/: progress.json
nba_etl_pkg/nba_etl_output/data/: games.csv  games.parquet  player_advanced.csv  player_advanced.parquet  player_boxscores.csv  player_boxscores.parquet  team_boxscores.csv  team_boxscores.parquet
nba_etl_pkg/nba_etl_output/metadata/: endpoint_provenance.jsonl  fetch_errors.jsonl  players.csv  season_calendar.csv  teams.csv
nba_etl_pkg/nba_etl_output/raw/boxscore_cdn/: boxscore_0062500001.json
nba_etl_pkg/nba_etl_pkg/nba_etl_output/: progress.json
nba_etl_pkg/nba_etl_pkg/nba_etl_output/data/: games.csv  (+7 more)
nba_etl_pkg/tests/: test_cache.py  test_cli.py  test_normalize.py
nba_etl_pkg/tests/fixtures/: cdn_boxscore.json  stats_advanced.json  stats_boxscore.json
nba_latest_pkg/: README.md  pyproject.toml
nba_latest_pkg/nba_latest/: __init__.py  cache.py  cli.py  models.py  normalize.py
nba_latest_pkg/nba_latest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
nba_latest_pkg/nba_latest/clients/: scoreboard_client.py  stats_client.py
nba_latest_pkg/tests/: test_cache.py  test_cli.py  test_normalize.py
nba_latest_pkg/tests/fixtures/: fallback_scoreboard.json  primary_scoreboard.json
(+174 files in other folders)
