[project]
name = "nba-etl"
version = "0.1.0"
description = "NBA first-party ETL pipeline for box scores and advanced metrics."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31.0",
  "pandas>=2.1.0",
  "pyarrow>=14.0.0",
]

[project.scripts]
nba_etl = "nba_etl.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
