[project]
name = "nba-latest"
version = "0.1.0"
description = "CLI to fetch the most recent completed NBA game from first-party NBA data sources."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
]

[project.scripts]
nba_latest = "nba_latest.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
